--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   "repository": "https://github.com/SAP-samples/sap-learning-extension-suite",
   "dependencies": {
     "@sap-cloud-sdk/http-client": "2.15.0",
+    "@sap-cloud-sdk/resilience": "3.12.0",
     "@sap/cds": "7.2.0",
     "@sap/cds-dk": "7.6.0",
-    "@sap-cloud-sdk/resilience": "3.12.0",
     "express": "^4"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/ux-specification": "^1.120.7"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch-empmanagement": "cds watch --open empmanagement/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-empmngt": "cds watch --open empmngt/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "cds": {
     "requires": {
@@ -25,5 +28,9 @@
         "model": "srv/external/API_BUSINESS_PARTNER"
       }
     }
-  }
+  },
+  "sapux": [
+    "app/empmanagement",
+    "app/empmngt"
+  ]
 }
