--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@sap-cloud-sdk/resilience": "3.12.0",
     "@sap/cds": "7.2.0",
     "@sap/cds-dk": "7.6.0",
-    "express": "^4"
+    "express": "^4",
+    "@sap/cds-hana": "^2"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
@@ -23,12 +24,18 @@
   },
   "cds": {
     "requires": {
+      "multitenancy": true,
+      "extensibility": true,
+      "toggles": true,
       "API_BUSINESS_PARTNER": {
         "kind": "odata",
         "model": "srv/external/API_BUSINESS_PARTNER",
-        "credentials":{
+        "credentials": {
           "url": "https://sandbox.api.sap.com/s4hanacloud/sap/opu/odata/sap/API_BUSINESS_PARTNER/"
         }
+      },
+      "[production]": {
+        "db": "hana"
       }
     }
   },
