--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@sap/cds": "7.2.0",
     "@sap/cds-dk": "7.6.0",
     "express": "^4",
-    "@sap/cds-hana": "^2"
+    "@sap/cds-hana": "^2",
+    "@sap/xssec": "^3"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
@@ -35,7 +36,8 @@
         }
       },
       "[production]": {
-        "db": "hana"
+        "db": "hana",
+        "auth": "xsuaa"
       }
     }
   },
